finish lesson 3. add pseudoclasses and custom classes

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "lesson2",
+  "name": "lesson4",
   "version": "1.0.0",
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./src/input.css -o ./build/css/style.css --watch"
+    "tailwind": "npx tailwindcss -i ./src/input.css -o ./build/css/style.css --watch",
+    "prettier": "npx prettier --write **/*.html"
   },
   "keywords": [],
   "author": "",
